--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.11",
-    "astro": "^5.11.0",
-    "tailwindcss": "^4.1.11"
+    "astro": "^5.11.0"
+  },
+  "devDependencies": {
+    "@astrojs/tailwind": "^6.0.2",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.3.3"
   }
 }
